
\-- release 2.6.1

  * Fixed all legacy GitHub CodeQL alerts and security issues.

  * Fixed all legacy GitHub Codacy Security Scan reported issues.

  * Improved security - configuration behavior changed as below for HttpClientConfig, GRPCClientConfig, MqttClientConfig and AuthConfig (cfg_aut.propertie)
    1. TLS protocol: Use plaintext no SSL/TLS if TLS protocol is configured as blank or empty string.
    2. Keystore: Use JDK default keystore if not specified, behavior of using 'plaintext no SSL/TLS' has been removed.
    3. Truststore: Use JDK default truststore if not specified, behavior of using `TrustManager` that accepts all certificates has been removed.

  * Enhanced security: Replaced `secpr5121` with `secp256r1` for default `ECGenParameterSpec`.

  * Enhanced security: Fixed the use of a cryptographic algorithm with insufficient key size - Threw `InvalidAlgorithmParameterException` when using a cryptographic algorithm with insufficient key size to call `EncryptorUtil.generateKeyPair()`.

  * Enhanced security: Fixed polynomial regular expression used on uncontrolled data (`FormatterUtil`).

  * Enhanced error handling: `PathParm` with regex inside URL will return `400 Bad Request` when regex does not match.

  * Enhanced logging: Logged detailed information and stack trace for health check failure.

  * Enhanced logging: Netty channel handler exception will be logged only when:

    1.  run with `-debug`
    2.  or caller address is in enabled whitelist or not in enabled blacklist

  * Config change: `Regex.Prefix` is removed in `CallerAddressFilter`, the whitelist and blacklist no longer need a prefix to mark a value as regex.

    1.  `cfg_nio.properties`
          * removed: `CallerAddressFilter.Regex.Prefix`
          * default value changed: `CallerAddressFilter.option=String` (was `"HostName"`)
    2.  `cfg_grpc.properties`
          * removed: `gRpc.server.CallerAddressFilter.Regex.Prefix`