@@ -5,10 +5,14 @@
 
   * Fixed all legacy GitHub Codacy Security Scan reported issues.
 
-  * Improved security - configuration behavior changed as below for HttpClientConfig, GRPCClientConfig, MqttClientConfig and AuthConfig (cfg_aut.propertie)
+  * Improved security - configuration behavior changed as below of HttpClientConfig, GRPCClientConfig, MqttClientConfig and AuthConfig (cfg_aut.propertie)
     1. TLS protocol: Use plaintext no SSL/TLS if TLS protocol is configured as blank or empty string.
     2. Keystore: Use JDK default keystore if not specified, behavior of using 'plaintext no SSL/TLS' has been removed.
     3. Truststore: Use JDK default truststore if not specified, behavior of using `TrustManager` that accepts all certificates has been removed.
+
+  * Improved security - configuration behavior of NioConfig
+    1. TLS protocol: Use plaintext no SSL/TLS if TLS protocol is configured as blank or empty string.
+    2. Keystore: Required when TLS protocol is configured, otherwise throw IllegalStateException if not specified.
 
   * Enhanced security: Replaced `secpr5121` with `secp256r1` for default `ECGenParameterSpec`.
 
